Fix use_ok() so it doesn't leak pragmas from inside Test::More.
Bug added in 0.98_01.  Hooray for alphas.

For rt.cpan.org 67538

--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.98_02
+    Bug Fixes
+    * use_ok() in 0.98_01 was leaking pragmas from inside Test::More.
+      This looked like Test::More was forcing strict. [rt.cpan.org 67538]
+      (Father Chrysostomos)
+
+
 0.98_01  Tue Nov  8 17:07:58 PST 2011
     Bug Fixes
     * BAIL_OUT works inside a subtest. (Larry Leszczynski) [github #138]
