--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.98_02
+0.98_02  Thu Nov 24 01:13:53 PST 2011
     Bug Fixes
     * use_ok() in 0.98_01 was leaking pragmas from inside Test::More.
       This looked like Test::More was forcing strict. [rt.cpan.org 67538]
