Some clarifications of test/stream in the design doc.
For #211

--- a/lib/TB2/Design.pod
+++ b/lib/TB2/Design.pod
@@ -157,7 +157,7 @@ are universally applicable.  That is, you're not going to find code that
 tests XML.
 
 TB2 pushes this further, in ways already mentioned, and by stripping itself
-down at the core to just storing, formatting and testing results.  It
+down at the core to just storing and formatting results.  It
 does not provide anything but the equivalent of C<ok()>.  Additional
 functionality will be available in various roles that ship with TB2.  Most
 library authors will use those roles by default, but radical extensions may
@@ -362,8 +362,8 @@ not.
 
 Finally, TB2 must wait until the entire assert stack has had an opportunity
 to add diagnostics to the result before it can print the result.  Why? 
-TB1, only doing TAP, is fortunate in that it's a test.  It can print a
-result as soon as it gets it, and then append diagnostics onto the end. 
+TB1, only doing TAP, is fortunate in that TAP a streaming protocol.  It can
+print a result as soon as it gets it, and then append diagnostics onto the end. 
 But this isn't true of other output formats.  XML, for example, requires an
 opening and closing tag.
 
@@ -772,11 +772,12 @@ See L<TB2::Formatter> for details.
 
 =head2 streamer
 
-Takes the formatted test and outputs it, usually to STDOUT and
+Takes the formatted text and outputs it, usually to STDOUT and
 STDERR but it may instead capture it for debugging purposes, or send 
 it as an email, or write it to a file, or do all of these things.
 
-A formatter contains a streamer.
+A formatter contains a streamer and use it to output its formatted
+text.
 
 See L<TB2::Streamer> for details.
 
@@ -787,7 +788,7 @@ from most Perl tests.
 
 =head2 test
 
-An ambiguous term often used to mean an assert, a test or a suite.
-We'll avoid using it without qualification.
+An ambiguous term often used to mean an assert, a file full of
+asserts or a suite.  We'll avoid using it without qualification.
 
 =cut
