Remove TB2::NoHistory, it is unmaintained and has no future.
TB2::History will take over this role eventually (see #198).  Meanwhile, there's no
point in letting people rely on a half implementation that's going to be deleted.

For #241

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 See README and version control log for Test::Builder2 changes.
 
+1.005000_003
+    Incompatible changes (with the last alpha)
+    * TB2::NoHistory has been deleted before somebody relies on it.
+      It was unmaintained and will be replaced by a TB2::History feature.
+      See github 198.  [github 241]
+
+
 1.005000_002  Mon Nov 28 21:16:13 PST 2011
     This release is now 100% feature complete and supports all documented
     features of Test::Builder 0.98.  From this point forward it's bug
