--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 See README and version control log for Test::Builder2 changes.
 
-1.005000_003
+1.005000_003  Thu Mar 22 17:48:08 GMT 2012
     Distribution Changes
     * Added an explicit license file and copies of the GPL1 and Artistic
       License.
