Fix the thread crashes occurring with 5.12 and down.
For #261

It's something to do with TB2::TestState and one of...
* The wrapper around threads::shared
* That %defaults is not shared

The wrapper needs to be there, so %default got changed.  Unfortunately this means
that all defaults are shared.  Fortunately this really only effects TB2::TestState
which is shared.  Eventually this hack isn't going to work.  Sorry future.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 See README and version control log for Test::Builder2 changes.
 
 1.005000_004
+    Bug Fixes
+    * Fix the thread crashes occurring with 5.12 and down.
+      [github 261]
+
     Test Fixes
     * t/History/child_process.t was failing, the forked processes were
       improperly coordinated.
