--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 See README and version control log for Test::Builder2 changes.
 
-1.005000_004
+1.005000_004  Sun Mar 25 15:01:49 BST 2012
     Bug Fixes
     * Fix the thread crashes occurring with 5.12 and down.
       [github 261]
