--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.98_03
+    Bug Fixes
+    * use_ok() was calling class->import without quoting which could
+      cause problems if "class" is also a function.
+
+
 0.98_02  Thu Nov 24 01:13:53 PST 2011
     Bug Fixes
     * use_ok() in 0.98_01 was leaking pragmas from inside Test::More.
