--- a/Changes
+++ b/Changes
@@ -8,6 +8,11 @@ See README and version control log for Test::Builder2 changes.
     * Restored the behavior of a fork, it will not issue its own
       plan, making testing with fork easier.
 
+    Incompatible Changes with previous alphas
+    * TB2::Counter has been removed [github 119]
+    * The test counter has been moved from the TAP formatter
+      into TB2::History [github 190]
+
 
 1.005000_004  Sun Mar 25 15:01:49 BST 2012
     Bug Fixes
