--- a/Changes
+++ b/Changes
@@ -8,6 +8,10 @@
     * use_ok() was calling class->import without quoting which could
       cause problems if "class" is also a function.
 
+    Doc Fixes
+    * use_ok() has been discouraged and de-emphasized as a general
+      replacement for `use` in tests. [github #288]
+
     Incompatible Changes With Previous Alphas
     * use_ok() will no longer apply lexical pragams.  The incompatibilities
       and extra complexity is not worth the marginal use.
