--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 See README and version control log for Test::Builder2 changes.
 
+1.005000_006
+    Misc
+    * Update the resources meta data to point at the correct repository, issues
+      mailing list and home page.
+
+
 1.005000_005  Thu Apr 26 15:23:25 PDT 2012
     New Features
     * cmp_ok() will error when used with something which is not a
