Patch TB2::Mouse to not untie $_.
local $_ has the nasty habit of untying whatever's in $_.  Those local $_
are there to allow type contraints and the like use $_ instead of $_[0].

See https://rt.cpan.org/Ticket/Display.html?id=73592 for the full Mouse bug

For #293

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 See README and version control log for Test::Builder2 changes.
 
 1.005000_006
+    Bug Fixes
+    * Patched TB2::Mouse to not blow over tied $_ (a local $_ bug).
+      (Father Chrysostomos) [github 293]
+
     Misc
     * Update the resources meta data to point at the correct repository, issues
       mailing list and home page.
