Emulate an accidental behavior of Test::Builder::Tester.
Previously, TBT would not completely reset the test state so the
plan would still be set.  Some tests accidentally relied on this,
anything that would set the plan if it hasn't already been set like
Test::HasVersion or Test::DistManifest.

This change sets a plan in the test test if there was one before
to emulate the behavior.

For #327 and #328

--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ See README and version control log for Test::Builder2 changes.
     Bug Fixes
     * Patched TB2::Mouse to not blow over tied $_ (a local $_ bug).
       (Father Chrysostomos) [github 293]
+    * Test::Builder::Tester will now set a plan in test tests emulating
+      an undocumented feature that some tests accidentally rely on.
+      [github 327] [github 328]
 
     Misc
     * Update the resources meta data to point at the correct repository, issues
