--- a/Changes
+++ b/Changes
@@ -1,10 +1,19 @@
 See README and version control log for Test::Builder2 changes.
 
-1.005000_006
+1.005000_006  Fri Apr 12 18:01:09 BST 2013
     New Features
     * Memory usage will not grow as more tests are run.
     * Added TB2::History->last_result and last_event to retrieve the
       last result and event seen.
+    * Clarify who to contact when getting a WHOA! [github 324]
+      (Noirin Plunkett)
+    * TB2::Formatter::SimpleHTML now shows the file and line.
+      (Michael G Schwern)
+    * Add TB2::History->literal_pass_count and literal_fail_count to
+      record results with literal_pass and literal_fail.
+      (Michael G Schwern)
+    * Add TB2::History->last_result and last_event to record the
+      last seen event and result. (Michael G Schwern)
 
     Bug Fixes
     * Patched TB2::Mouse to not blow over tied $_ (a local $_ bug).
@@ -17,6 +26,18 @@ See README and version control log for Test::Builder2 changes.
       rely on.  [github #276]
     * Fix TB2::Formatter::PlusMinus and TB2::Formatter::POSIX.  They
       suffered bit rot.
+    * Conditionally call special methods on Formatters so things don't
+      blow up on non-TAP formatters. (Michael G Schwern)
+    * Fix test_fail called via a do statement. [github #349] (nnutter)
+    * Fix TB2_FORMATTER_CLASS with taint mode tests. [github #357]
+      (Michael G Schwern)
+
+    Doc Fixes
+    * Typo and POD formatting fixes. [github #318] [github #320] [github #355]
+      (Ben Bullock, pdl, derek.mead@gmail.com)
+    * Add a COMPATIBILITY section to the Test::More docs. [github #344]
+      (pdl, Michael G Schwern)
+    * Fix UTF-8 encoding errors in the docs. [github #348] (Michael G Schwern)
 
     Misc
     * Update the resources meta data to point at the correct repository, issues
@@ -34,7 +55,10 @@ See README and version control log for Test::Builder2 changes.
     Feature Changes
     * 'use Test::More no_plan => 1' no longer warns.  This allows us
       to simplify the import argument handling, everything is a hash
-      now (or can be converted into one).
+      now (or can be converted into one). (Michael G Schwern)
+
+    Test Fixes
+    * Fix tests for Carp 1.25 [github 321] (Michael G Schwern)
 
 
 1.005000_005  Thu Apr 26 15:23:25 PDT 2012
