Require Scalar::Util used by isa_ok()
1.13 is the version which shipped with 5.8.1.

Don't make 5.8.1 the minimum Perl to allow it to still work on 5.6
if they have Scalar::Util.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 0.98_04
+    Distribution Changes
+    * Scalar::Util 1.13 (ships with Perl 5.8.1) is now required.
+      (Michael G Schwern)
+
     Feature Changes
     * The default name and diagnostics for isa_ok() and new_ok() have
       changed. (Michael G Schwern)
