--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.98_04
+0.98_04  Sun Apr 14 10:54:13 BST 2013
     Distribution Changes
     * Scalar::Util 1.13 (ships with Perl 5.8.1) is now required.
       (Michael G Schwern)
