--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.98_05
+0.98_05  Tue Apr 23 17:33:51 PDT 2013
     Doc Changes
     * Add a shorter work around for the UTF-8 output problem.
       (Michael G Schwern)
