--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.001005     Tue Sep  2 19:47:19:00 JST 2014 
+    * Changed install path for perl 5.12 or higher.
+
 1.001004_003 Sat May  17 13:43:00 PST 2014
     * Another Minor doc fix to solve test bug
     * Fix #399, conflict with strawberry-portable
