--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.001012     Tue Dec 23 07:39:00:00 PST 2015
+    * Move test that was dropped in the wrong directory
+
 1.001011     Sat Dec 20 09:08:00:00 PST 2015
     * Remove POD Coverage test
 
